--- a/scratch.html
+++ b/scratch.html
@@ -3,131 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap">
-    <style>
-        body {
-            font-family: 'Press Start 2P', cursive;
-            background-color: #F7E7CE;
-            color: #333;
-            margin: 0;
-            padding: 0;
-            position: relative;
-            min-height: 100vh;
-        }
-        header {
-            background-color: #B4CFEC;  
-            padding: 20px;
-            text-align: center;
-            position: relative;
-            overflow: hidden;
-        }
-        header::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: radial-gradient(circle, rgba(128, 0, 128, 0.1), rgba(128, 0, 128, 0.2), transparent);
-            transform: scale(0);
-            transition: transform 0.5s;
-            border-radius: 50%;
-            pointer-events: none;
-
-        }
-        header:hover::before {
-            transform: scale(2);
-           
-        }
-        header h1, .pixelized {
-            font-size: 14px;
-            font-family: 'Courier New', Courier, monospace;
-            color: #900C3F;
-            margin: 10px 0;
-        }
-        .pixelized {
-            font-family: 'Press Start 2P', cursive;
-            font-size: 24px;
-            color: #ff1654;
-            text-transform: uppercase;
-            display: inline-block;
-            letter-spacing: 0.1em;
-            text-shadow: 1px 1px 0 #000;
-        }
-        .pixelized a, header h1 a {
-            color: inherit;
-            text-decoration: none;
-        }
-        .slider {
-            perspective: 1000px;
-            width: 20%;
-            position: absolute;
-            bottom: 100px;
-            right: 20px;
-            z-index: 10;
-        }
-        .sql-logo, .python-logo, .css-logo, .js-logo {
-            width: 100%;
-            height: 200px;
-            background-size: contain;
-            background-repeat: no-repeat;
-            background-position: center;
-        }
-        /* Update these paths with your actual images */
-        .sql-logo { background-image: url('https://logodix.com/logo/541959.jpg'); }
-        .python-logo { background-image: url('Python-logo-placeholder.jpg'); }
-        .css-logo { background-image: url('CSS-logo-placeholder.jpg'); }
-        .js-logo { background-image: url('JS-logo-placeholder.jpg'); }
-        footer {
-            background-color: #B4CFEC;
-            padding: 20px;
-            text-align: center;
-            position: absolute;
-            bottom: 0;
-            width: 100%;
-        }
-    </style>
+    <title>Parallax Website</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
     <header>
-        <h1>
-            <a href="https://github.com/peytonswan/peytonswan.github.io">
-                Website created with: Python, C++, JavaScript, SQL, and HTML
-            </a>
-        </h1>
-        <h1 class="pixelized">
-            Welcome to my DATA-352W Page
-            <a href="https://github.com/peytonswan/peytonswan.github.io">!</a>
-        </h1>
-        <h1>Website created by: Peyton Swan</h1>
+        <h1>Logo</h1>
+        <nav>
+            <a href="#" class="active">Home</a>
+            <a href="#">About</a>
+            <a href="#">Services</a>
+            <a href="#">Contact</a>
+        </nav>
     </header>
 
-    <main>
-        <section>
-            <p>My Personal Website now in HTML!</p>
-            <p>Below are links to my resume, assignments for this class, and more!</p>
-            
-            <h2><a href="https://peytonswan.github.io/resume.html">Resume</a></h2>
-            <h2><a href="https://www.linkedin.com/in/your-profile">LinkedIn</a></h2>
-            <h2><a href="https://peytonswan.github.io/solar_system.html">Solar System Project</a></h2>
-            <h2><a href="https://peytonswan.github.io/plot.html">Plot Cube</a></h2>
-            <h2><a href="https://peytonswan.github.io/Assignments.html">Assignments</a></h2>
-            <h2><a href="https://peytonswan.github.io/forfunindexfile.html">For Fun</a></h2>
-        </section>
-    </main>
+    <section class="home">
+        <img src="assets/mount2.png" class="mount2">
+        <img src="assets/mount1.png" class="mount1">
+        <img src="assets/bush2.png" class="bush2">
 
-    <!-- Image slider -->
-    <div class="slider">
-        <div class="slide sql-logo"></div>
-        <div class="slide python-logo"></div>
-        <div class="slide css-logo"></div>
-        <div class="slide js-logo"></div>
-    </div>
+        <h1 class="title">Parallax</h1>
 
-    <footer>
-        <p>&copy; DATA-352 Ethics</p>
-    </footer>
+        <img src="assets/bush1.png" class="bush1">
+        <img src="assets/leaf2.png" class="leaf2">
+        <img src="assets/leaf1.png" class="leaf1">
+    </section>
+
+    <section class="about">
+        <h1>Parallax</h1>
+        <br>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis rem aliquid unde praesentium harum consequuntur consequatur exercitationem quas officiis quod quidem amet, illum facere ipsam vitae quae, a aut non numquam minus voluptate doloremque. Fugiat dolor dolores, temporibus, culpa quia illo, enim sint harum adipisci voluptatem aliquid. Officia tempore dolore natus iure, odit blanditiis? Voluptate aliquid vel suscipit fugiat dolor distinctio, blanditiis cupiditate rerum quidem repellat sint vero error minima? Culpa, porro ipsa totam consequuntur molestiae nulla dignissimos voluptatum provident, minima eligendi sapiente tempore quas asperiores, reiciendis veritatis placeat? Odit nobis rem a iste reiciendis nemo tempore quae asperiores quia.</p>
+        <br>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, aliquam illum. Totam inventore beatae, facilis harum adipisci molestias blanditiis voluptatibus consequatur, explicabo, voluptates consectetur eaque nihil perferendis ratione architecto. Unde odio modi dolor, suscipit nostrum quibusdam quia minima, facilis distinctio aliquid excepturi. Repellendus consequuntur numquam, minus tenetur commodi ipsum velit aspernatur nostrum suscipit explicabo possimus molestiae minima doloribus. Doloribus architecto voluptates perferendis nostrum ullam hic odio sunt. Dolores facilis, pariatur eligendi excepturi accusamus optio aliquam maxime aspernatur, explicabo velit cum, quia a cumque voluptas quis nesciunt. Repellendus hic consequuntur aperiam delectus ratione reprehenderit expedita adipisci ut nesciunt amet, exercitationem illo.</p>
+        <br>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt saepe dolorem consectetur architecto officiis. Unde, at. Magnam sed aliquid nesciunt error sint repudiandae ad. Reiciendis minus, esse eos soluta mollitia quia est! Inventore aliquid ut hic fuga ratione consectetur ea? Ratione tempore, ab dolor, assumenda neque doloremque voluptate nesciunt eaque, illo ipsa quia. Nihil dolor libero animi quibusdam recusandae et cumque deleniti minima unde iste sint possimus numquam nam, corporis cupiditate? Maxime voluptate atque alias consequuntur tenetur non quia amet, eligendi libero odio adipisci aperiam dolore perferendis illum vero, nam temporibus numquam cumque, neque fuga iste? Totam cum modi excepturi!</p>
+    </section>
+
+    <script src="script.js"></script>
+
 </body>
 </html>
-
